Revision history for Text-XLogfile

0.05    Fri Jul 10 03:06:15 2009
        Modernize the dist

0.04    Wed Mar 26 00:51:03 2008
        Document that we chomp input on parse_xlogline.
        each_xlogline function

0.03    Sat Aug  4 01:44:29 2007
        More minor fixes.

0.02    Sat Aug  4 00:31:15 2007
        Minor fixes.

0.01    Fri Aug  3 22:03:17 2007
        First version, released on an unsuspecting world.
