@@ -1,11 +1,7 @@
 *.swp
-MANIFEST
-MANIFEST.bak
-META.yml
-Makefile
-Makefile.old
-SIGNATURE
-blib/
-inc/
-pm_to_blib
-Text-XLogfile-*
+/.ackrc
+/.build/
+!/.gitignore
+/.latest
+/Text-XLogfile-*/
+/Text-XLogfile-*.tar.gz
