@@ -1,0 +1,14 @@
+name                = Text-XLogfile
+author              = Shawn M Moore <sartak@gmail.com>
+copyright_holder    = Shawn M Moore
+copyright_year      = 2007
+license             = Perl_5
+
+[@Author::ETHER]
+Authority.authority = cpan:SARTAK
+installer = MakeMaker
+changes_version_columns = 8
+-remove = PodWeaver
+-remove = Test::CleanNamespaces
+-remove = Test::CPAN::Changes
+-remove = Test::PodSpelling
